# HyperXAlpha

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: HeadsetConfig.h  JsonConfig.h  SwitchCtrl.h  alpha_w.h  dialog.h  hyperxApp.h  hyperxFrame.h
src/: HeadsetConfig.cpp  SwitchCtrl.cpp  dialog.cpp  hyperxApp.cpp  hyperxFrame.cpp
